# nf-comments

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: common.cmake
conf/: nf_config.json
srcs/browser/css/: nf_comments.css
srcs/browser/js/: nf_comments.js  nf_comments_template.js  nf_pagination.js
srcs/server/: CMakeLists.txt  CommentElement.cpp  CommentElement.h  CommentsCacheManager.cpp  CommentsCacheManager.h  CommentsData.cpp  CommentsData.h  CommentsDataCache.cpp  CommentsDataCache.h  CommentsDataManager.cpp  CommentsDataManager.h  Config.cpp  Config.h  ErrorCode.h  HttpServer.cpp  HttpServer.h  IHttpServerDelegate.h  Logger.cpp  Logger.h  Service.cpp  Service.h  TestCaseLoader.cpp  TestCaseLoader.h  base64.hpp  main.cpp  mongoose.h
tests/: test_data.txt
tools/: build_and_install_jsoncpp.sh  build_and_install_sqlite3.sh
